<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <item
        android:id="@+id/action_archived"
        android:orderInCategory="100"
        android:title="@string/activity_main_action_archived"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_insert_test_data_en"
        android:orderInCategory="100"
        android:title="@string/activity_main_action_insert_test_data_en"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_insert_test_data_pl"
        android:orderInCategory="100"
        android:title="@string/activity_main_action_insert_test_data_pl"
        app:showAsAction="never" />

</menu>
